--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
     "react/no-unknown-property": "off",
     "no-unused-vars": "off",
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off",
-    "react/display-name": "off"
+    "react/prop-types": "off"
   }
 }
